[gd_scene load_steps=27 format=3 uid="uid://dodyybgnnyjah"]

[ext_resource type="PackedScene" uid="uid://dkpis7w2h85hp" path="res://Characters/Enemies/Enemy.tscn" id="1_xn4ik"]
[ext_resource type="Script" path="res://Characters/Enemies/crossbowman/crossbowman.gd" id="2_8pcxu"]
[ext_resource type="Script" path="res://addons/beehave/nodes/beehave_tree.gd" id="3_e2h85"]
[ext_resource type="Script" path="res://addons/beehave/nodes/composites/simple_parallel.gd" id="4_24i2g"]
[ext_resource type="Script" path="res://addons/beehave/nodes/composites/selector.gd" id="4_w81st"]
[ext_resource type="Script" path="res://addons/beehave/nodes/composites/sequence.gd" id="5_7ki1g"]
[ext_resource type="Script" path="res://Characters/ai/leafs/actions/weapon_reload.gd" id="6_sj7gf"]
[ext_resource type="Script" path="res://Characters/ai/leafs/actions/set_pathfinding_mode.gd" id="7_6jmms"]
[ext_resource type="Script" path="res://Characters/ai/leafs/actions/move_to_target.gd" id="8_4lp7y"]
[ext_resource type="Script" path="res://Characters/ai/leafs/actions/point_weapon_to_target.gd" id="9_7yqix"]
[ext_resource type="Script" path="res://Characters/ai/leafs/conditions/is_close_to_target.gd" id="10_hncrv"]
[ext_resource type="Script" path="res://Characters/ai/leafs/actions/weapon_attack.gd" id="10_i5lik"]
[ext_resource type="Texture2D" uid="uid://jfehaj24kmy2" path="res://Art/16x16 Pixel Art Roguellike Sewer Pack/Enemies/Skeleton/skelebro_warrior.png" id="11_736xf"]
[ext_resource type="Script" path="res://Characters/ai/leafs/actions/update_animation_according_to_mov_direction.gd" id="12_n52r4"]
[ext_resource type="Script" path="res://Characters/Enemies/enemy_weapons.gd" id="12_y8twa"]
[ext_resource type="PackedScene" uid="uid://dkpyvq2xuuytm" path="res://Weapons/Ranged/crossbows/wooden_crossbow/wooden_crossbow.tscn" id="13_8mxi0"]
[ext_resource type="Script" path="res://Characters/ai/leafs/conditions/is_weapon_busy.gd" id="13_jj16k"]
[ext_resource type="Script" path="res://Components/projectile_detector/projectile_detector.gd" id="14_ht524"]
[ext_resource type="Script" path="res://Components/character_detector/aim_component.gd" id="18_qam54"]

[sub_resource type="CircleShape2D" id="CircleShape2D_i8c27"]
radius = 3.0

[sub_resource type="Animation" id="Animation_kcdck"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8lfge"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_5onuv"]
resource_name = "idle_up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_78ukl"]
resource_name = "move"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_6osfq"]
resource_name = "move_up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wst10"]
_data = {
"RESET": SubResource("Animation_kcdck"),
"idle": SubResource("Animation_8lfge"),
"idle_up": SubResource("Animation_5onuv"),
"move": SubResource("Animation_78ukl"),
"move_up": SubResource("Animation_6osfq")
}

[node name="Crossbowman" instance=ExtResource("1_xn4ik")]
script = ExtResource("2_8pcxu")

[node name="FootmanBeehaveTree" type="Node" parent="." index="1" node_paths=PackedStringArray("blackboard", "actor")]
script = ExtResource("3_e2h85")
blackboard = NodePath("@Node@25099")
actor = NodePath("..")

[node name="SimpleParallelComposite2" type="Node" parent="FootmanBeehaveTree" index="0"]
script = ExtResource("4_24i2g")

[node name="SimpleParallelComposite" type="Node" parent="FootmanBeehaveTree/SimpleParallelComposite2" index="0"]
script = ExtResource("4_24i2g")

[node name="SelectorComposite2" type="Node" parent="FootmanBeehaveTree/SimpleParallelComposite2/SimpleParallelComposite" index="0"]
script = ExtResource("4_w81st")

[node name="SequenceComposite3" type="Node" parent="FootmanBeehaveTree/SimpleParallelComposite2/SimpleParallelComposite/SelectorComposite2" index="0"]
script = ExtResource("5_7ki1g")

[node name="IsCloseToTarget" type="Node" parent="FootmanBeehaveTree/SimpleParallelComposite2/SimpleParallelComposite/SelectorComposite2/SequenceComposite3" index="0"]
script = ExtResource("10_hncrv")
closer_than = 32

[node name="SetPathfindingMode" type="Node" parent="FootmanBeehaveTree/SimpleParallelComposite2/SimpleParallelComposite/SelectorComposite2/SequenceComposite3" index="1"]
script = ExtResource("7_6jmms")
mode = 1

[node name="MoveToTarget" type="Node" parent="FootmanBeehaveTree/SimpleParallelComposite2/SimpleParallelComposite/SelectorComposite2/SequenceComposite3" index="2"]
script = ExtResource("8_4lp7y")
time_limit = 1.0

[node name="WeaponReload" type="Node" parent="FootmanBeehaveTree/SimpleParallelComposite2/SimpleParallelComposite/SelectorComposite2" index="1"]
script = ExtResource("6_sj7gf")

[node name="SequenceComposite" type="Node" parent="FootmanBeehaveTree/SimpleParallelComposite2/SimpleParallelComposite/SelectorComposite2" index="2"]
script = ExtResource("5_7ki1g")

[node name="IsCloseToTarget" type="Node" parent="FootmanBeehaveTree/SimpleParallelComposite2/SimpleParallelComposite/SelectorComposite2/SequenceComposite" index="0"]
script = ExtResource("10_hncrv")
closer_than = 100

[node name="IsWeaponBusy" type="Node" parent="FootmanBeehaveTree/SimpleParallelComposite2/SimpleParallelComposite/SelectorComposite2/SequenceComposite" index="1"]
script = ExtResource("13_jj16k")

[node name="WeaponNormalAttack" type="Node" parent="FootmanBeehaveTree/SimpleParallelComposite2/SimpleParallelComposite/SelectorComposite2/SequenceComposite" index="2"]
script = ExtResource("10_i5lik")

[node name="SequenceComposite2" type="Node" parent="FootmanBeehaveTree/SimpleParallelComposite2/SimpleParallelComposite/SelectorComposite2" index="3"]
script = ExtResource("5_7ki1g")

[node name="IsWeaponBusy" type="Node" parent="FootmanBeehaveTree/SimpleParallelComposite2/SimpleParallelComposite/SelectorComposite2/SequenceComposite2" index="0"]
script = ExtResource("13_jj16k")

[node name="SetPathfindingMode" type="Node" parent="FootmanBeehaveTree/SimpleParallelComposite2/SimpleParallelComposite/SelectorComposite2/SequenceComposite2" index="1"]
script = ExtResource("7_6jmms")

[node name="MoveToTarget" type="Node" parent="FootmanBeehaveTree/SimpleParallelComposite2/SimpleParallelComposite/SelectorComposite2/SequenceComposite2" index="2"]
script = ExtResource("8_4lp7y")
closer_than = 96

[node name="PointWeaponToTarget" type="Node" parent="FootmanBeehaveTree/SimpleParallelComposite2/SimpleParallelComposite" index="1"]
script = ExtResource("9_7yqix")

[node name="UpdateAnimationAccordingToMovdirection" type="Node" parent="FootmanBeehaveTree/SimpleParallelComposite2" index="1"]
script = ExtResource("12_n52r4")

[node name="Sprite2D" parent="." index="3"]
position = Vector2(0, -5)
texture = ExtResource("11_736xf")
hframes = 6
vframes = 4

[node name="CollisionShape2D" parent="." index="4"]
shape = SubResource("CircleShape2D_i8c27")

[node name="AnimationPlayer" parent="." index="5"]
libraries = {
"": SubResource("AnimationLibrary_wst10")
}

[node name="EnemyWeapons" type="Node2D" parent="." index="12"]
position = Vector2(0, -3)
script = ExtResource("12_y8twa")

[node name="WoodenCrossbow" parent="EnemyWeapons" index="0" instance=ExtResource("13_8mxi0")]

[node name="ProjectileDetector" type="Area2D" parent="." index="15"]
visible = false
collision_layer = 0
collision_mask = 8
script = ExtResource("14_ht524")
radius = 128

[node name="AimComponent" type="Node" parent="." index="16"]
script = ExtResource("18_qam54")
flags = 1
